# basic_workflows

./: .gitignore  README.md
.github/workflows/: action-01.yml  ci-cd.yml
client/: Dockerfile  package-lock.json  package.json
client/src/: App.tsx
server/: Dockerfile  makefile  pyproject.toml  server.py
server/app/: main.py
server/app/config/: settings.py
server/app/controllers/: health_controller.py
server/app/middlewares/: request_logger.py
server/app/repositories/: base_repository.py
server/app/services/: health_service.py
