[project]
name = "api-server"
version = "0.1.0"
package-mode = false
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
requires-python = ">=3.13"


dependencies = [
    "fastapi (>=0.131.0,<0.132.0)",
    "uvicorn[standard] (>=0.41.0,<0.42.0)",
    "gunicorn (>=25.1.0,<26.0.0)",
    "pydantic-settings (>=2.7.0,<2.8.0)"
]




[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
